# actix-web-opentelemetry

./: CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md
.github/: dependabot.yml
.github/workflows/: ci.yaml
examples/: client.rs  server.rs
src/: client.rs  lib.rs  middleware.rs  route_formatter.rs  util.rs
src/middleware/: metrics.rs  mod.rs  route_formatter.rs  trace.rs
