[package]
name = "actix-web-opentelemetry"
version = "0.19.0"
authors = ["Julian Tescher <julian@outtherelabs.com>"]
description = "OpenTelemetry integration for Actix Web apps"
homepage = "https://github.com/OutThereLabs/actix-web-opentelemetry"
repository = "https://github.com/OutThereLabs/actix-web-opentelemetry"
readme = "README.md"
categories = ["api-bindings"]
keywords = ["actix", "actix-web", "opentelemetry", "jaeger", "prometheus"]
license = "MIT"
edition = "2021"

[features]
metrics = ["opentelemetry/metrics"]
metrics-prometheus = ["metrics", "opentelemetry-prometheus", "prometheus"]
sync-middleware = []

[dependencies]
actix-http = { version = "3.0", default-features = false, features = ["compress-zstd"] }
actix-web = { version = "4.0", default-features = false, features = ["compress-zstd"] }
awc = { version = "3.0", optional = true, default-features = false, features = ["compress-zstd"] }
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
opentelemetry = { version = "0.24", default-features = false, features = ["trace"] }
opentelemetry-prometheus = { version = "0.17", optional = true }
opentelemetry-semantic-conventions = "0.16"
prometheus = { version = "0.13", default-features = false, optional = true }
serde = "1.0"

[dev-dependencies]
actix-web = { version = "4.0", features = ["macros"] }
actix-web-opentelemetry = { path = ".", features = ["metrics-prometheus", "sync-middleware", "awc"] }
opentelemetry_sdk = { version = "0.24", features = ["metrics", "rt-tokio-current-thread"] }
opentelemetry-otlp = "0.17"
opentelemetry-stdout = { version = "0.5", features = ["trace", "metrics"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
